# DDM_PARSE_Fusion

./: .gitignore  LICENSE  README.md  pyproject.toml
code/DDM/: Count_ASKGDDM_Result.py  rdflib.py
code/Journal/: timeline.py
code/PARSE/: __init__.py
data/researchers-data-2021/: A. Shaam Al Abed--8105198410175048289.json  A.L. (Lynton) Jaques-2552463880601792070.json  AJ Mitchell-4522529416992654427.json  Aaron Bruhn-4391755202117737298.json  Aaron Tranter--6112778066035992756.json  Abdel Latif Mohamed-2531951401583768863.json  Abhinav Mehta-3493777569925339111.json  Abidah Setyowati-2419392189651628614.json  Adam Broinowski-7964046154718083294.json  Adam Butt-2943004819833930396.json  Adam Cawley-1496365563297318399.json  Adam D. Thomas--8537890652504537598.json  Adam Damry-8831837539589091725.json  Adam Graycar--3320189380864236720.json  Adam Henschke--4459345618465318282.json  Adam Masters-3578337877669784942.json  Adam Piggott-4194881432546808338.json  Adam Reddiex--7233963911558270553.json  Adam Thorin Croft--1162372126671361500.json  Adam Triggs--4367374860058997104.json  Adebayo Jolayemi--7838351156072673327.json  Adele Lehane--1185340521081460429.json  Adele Morrison--8179227993048560867.json  Adi Botea-103503982715767506.json  Aditya Balasubramanian--1534093805545381018.json  Aditya Chopra--8354895274085043863.json  Aditya Menon-751189686436837212.json  Adria Closa Mosquera-394572701771158994.json  Adrian Ankiewicz-4270982578088182509.json  Adrian Hayes--4332479662614227856.json  Adrian Kay-8195021508406547728.json  Adrian Lowe--2528291804503658863.json  (+3508 more)
(+376 files in other folders)
