[tool.poetry]
name = "parse-ddm-integration"
version = "0.1.0"
description = ""
authors = ["bowen zhang <bowen.zhang@qdx.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.1.0"
markdown = "^3.7"
marker-pdf = "^0.3.9"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
